spacing fix

--- a/darkmode.css
+++ b/darkmode.css
@@ -3,16 +3,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	color: #bfbebe;
 	border-color: transparent !important;
 }
-.user_toolbar>ul>li:before {
-    right: 0;
-    background: rgba(33,58,98,0);
-    background: -webkit-gradient(linear, left top, left bottom, rgba(33,58,98,0), #213a6200, rgba(33,58,98,0));
-    background: -webkit-linear-gradient(top, rgba(33,58,98,0) 0%, #4c4c4c00 50%, rgba(33,58,98,0) 100%);
-    background: linear-gradient(to bottom, rgba(33,58,98,0) 0%, #5f5f5f 50%, rgba(33,58,98,0) 100%);
-}
-.user_toolbar>ul>li.hover>ul, .user_toolbar>ul>li ul {
-	border-color: transparent !important;
-}
 .sidebar-blog-post-list .blog_post_link {
 	color: #bfbfbf;
 }
@@ -143,7 +133,7 @@ a.sidebar-header:hover {
 }
 .content_box, .user-cp-content-box, .bookshelf-card, .user-card, .list_boxes .groups ul li a, .api-content-box, .bookshelf-sidebar-list li.selected, .bookshelf-sidebar-list .bookshelf-icon, div.search_results_count, .comment .data, .comment .avatar, .feed>li, .feed>li .avatar, .front_page .featured_box, .group_list .icon, .thread_list table td .avatar, .thread_list table td .group-icon, .member_list table td img.avatar, .group-card, .private-message-list .avatar, .sidebar-box, .sidebar-blog-post-list>li, .statistics .graph, .story_content_box, .story_container img.story_avatar, .story-card, .thumbnail-story-list li .item, .tag-page .related-characters li a, .tag-header, .user_cp .tabs img, .user_cp .tabs .tab-collection, div.user_cp .message_table img.avatar, .nav_bar .nav-bar-list>li>ul.drop-down-private-messages li .avatar, .nav_bar .nav-bar-list>li .nav-bar-drop-down.drop-down-private-messages li .avatar, .story-page-header .image-container img, .user-page-header .avatar-container img, .page_list, .page_list_info, .adsbygoogle, .hfksjdhfksjd, .pw-ad-box table, .private_messages .previous_message .avatar, .content_box, .user-cp-content-box, .bookshelf-card, .user-card, .list_boxes .groups ul li a, .api-content-box, .bookshelf-sidebar-list li.selected, .bookshelf-sidebar-list .bookshelf-icon, div.search_results_count, .comment .data, .comment .avatar, .feed>li, .feed>li .avatar, .front_page .featured_box, .group_list .icon, .thread_list table td .avatar, .thread_list table td .group-icon, .member_list table td img.avatar, .group-card, .private-message-list .avatar, .sidebar-box, .sidebar-blog-post-list>li, .statistics .graph, .story_content_box, .story_container img.story_avatar, .story-card, .thumbnail-story-list li .item, .tag-page .related-characters li a, .tag-header, .user_cp .tabs img, .user_cp .tabs .tab-collection, div.user_cp .message_table img.avatar, .nav_bar .nav-bar-list>li>ul.drop-down-private-messages li .avatar, .nav_bar .nav-bar-list>li .nav-bar-drop-down.drop-down-private-messages li .avatar, .story-page-header .image-container img, .user-page-header .avatar-container img, .page_list, .page_list_info, .adsbygoogle, .hfksjdhfksjd, .pw-ad-box table, .private_messages .previous_message .avatar {
 	background: #252525;
-	border: none;
+	border-color: transparent;
 }
 .sidebar-box .news-ticker li .avatar {
 	background: #252525;
@@ -716,6 +706,11 @@ ul.simple-user-list li {
 	background: #2b2b2b;
 	border: 1px solid #6d6d6d;
 	box-shadow: 0 0 0 1px #272727 inset
+}
+.user_toolbar>ul>li ul {
+	background: #2b2b2b;
+	color: #d6d6d6;
+	box-shadow: 3px 3px 5px rgba(0, 0, 0, .2)
 }
 .user_toolbar>ul>li ul i, .user_toolbar>ul>li ul .bookshelf-icon-element {
 	color: #d4d4d4;
@@ -1387,8 +1382,7 @@ div.user_page ul.list li span.info {
 .user_toolbar>ul>li ul {
 	background: #2b2b2b;
 	color: #d6d6d6;
-	box-shadow: none;
-	border-color: transparent !important;
+	box-shadow: 3px 3px 5px rgba(0, 0, 0, .2)
 }
 .user_toolbar>ul>li ul i, .user_toolbar>ul>li ul .bookshelf-icon-element {
 	color: #d4d4d4;
